@@ -14,7 +14,6 @@ import static com.google.common.collect.FluentIterable.from;
 
 import com.google.common.base.Preconditions;
 import com.google.common.base.Predicates;
-import com.google.common.base.Strings;
 import com.google.common.collect.HashMultimap;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
@@ -27,7 +26,6 @@ import java.io.PrintStream;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
@@ -51,7 +49,6 @@ import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.time.TimeSpan;
 import org.sosy_lab.common.time.Timer;
 import org.sosy_lab.cpachecker.cfa.CFA;
-import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionDeclaration;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.core.CPAcheckerResult.Result;
 import org.sosy_lab.cpachecker.core.CoreComponentsFactory;
@@ -116,7 +113,7 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
       String text =
           "Statistics for " + noOfRuns + ". execution of composition algorithm";
       pOut.println(text);
-      pOut.println(Strings.repeat("=", text.length()));
+      pOut.println("=".repeat(text.length()));
 
       printSubStatistics(pOut, pResult, pReached);
       pOut.println();
@@ -128,7 +125,6 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
       pOut.println("Number of algorithms provided:    " + configFiles.size());
       pOut.println("Number of composite analysis runs:        " + noOfRuns);
       pOut.println("Total time: " + totalTimer);
-      pOut.println("Times per algorithm: ");
 
       printSubStatistics(pOut, pResult, pReached);
     }
@@ -222,7 +218,7 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
     description = "where to store initial condition, when generated"
   )
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path initialCondition = Paths.get("AssumptionAutomaton.txt");
+  private Path initialCondition = Path.of("AssumptionAutomaton.txt");
 
   private AlgorithmCompositionStrategy selectionStrategy; // TODO initialize, set up
 
@@ -533,7 +529,7 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
 
     ConfigurableProgramAnalysis cpa = null;
     try {
-      AggregatedReachedSets aggregateReached = new AggregatedReachedSets();
+      AggregatedReachedSets aggregateReached = AggregatedReachedSets.empty();
       CoreComponentsFactory localCoreComponents =
           new CoreComponentsFactory(
               pCurrentContext.getConfig(),
@@ -669,7 +665,7 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
           aggregatePrecisionsForReuse(previousReachedSets, initialPrecision, pFMgr, pConfig);
     }
 
-    ReachedSet reached = pFactory.createReachedSet();
+    ReachedSet reached = pFactory.createReachedSet(pCpa);
     reached.add(initialState, initialPrecision);
     return reached;
   }
@@ -788,11 +784,11 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
     predicates.addAll(pPredPrec.getLocalPredicates().values());
 
     SetMultimap<CFANode, MemoryLocation> trackedVariables = HashMultimap.create();
-    CFANode dummyNode = new CFANode(CFunctionDeclaration.DUMMY);
+    CFANode dummyNode = CFANode.newDummyCFANode();
 
     for (AbstractionPredicate pred : predicates) {
-      for (String var : pFMgr.extractVariables(pred.getSymbolicVariable()).keySet()) {
-          trackedVariables.put(dummyNode, MemoryLocation.valueOf(var));
+      for (String var : pFMgr.extractVariables(pred.getSymbolicAtom()).keySet()) {
+          trackedVariables.put(dummyNode, MemoryLocation.parseExtendedQualifiedName(var));
       }
     }
 
